Fix bug. Google logo not showing up using the CDN

--- a/src/themes/dark/dark.css
+++ b/src/themes/dark/dark.css
@@ -159,7 +159,6 @@ body #widget {
 }
 
 .logo {
-  content: url(/images/google_on_non_white.png);
   margin-left: 10px;
   width: 58px;
   height: 17px;
