--- a/src/themes/light/light.css
+++ b/src/themes/light/light.css
@@ -172,7 +172,6 @@ body #widget {
 }
 
 .logo {
-  content: url(/images/google_on_white.png);
   margin-left: 10px;
   width: 58px;
   height: 17px;
